fix connect wallet button is covering text

--- a/components/buttons/Button.module.scss
+++ b/components/buttons/Button.module.scss
@@ -18,7 +18,7 @@
     bottom: 24px;
     transition: all 0.25s ease;
     border: none;
-    @media screen and (max-width: 767px) {
+    @media (max-width: 767px) {
       bottom: 120px;
     }
   }
